# flask_full_course

./: .gitignore  app.py  config.py  flask_full_course.txt  pyproject.toml
static/css/: main.css
templates/: base.html  index.html  update.html
